Updated favicon and background color

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import '../styles/global.css';
     <meta name="generator" content={Astro.generator} />
     <title>VVERA—STUDIO</title>
   </head>
-  <body class="bg-amber-100">
+  <body class="bg-[#FFFDE6]">
     <slot />
   </body>
 </html>
