--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -4,7 +4,7 @@ import FlowerSaturated from '../assets/flower-saturated.png';
 ---
 
 <main class="h-screen flex flex-col justify-center items-center">
-  <p>(under construction)</p>
+  <p class="font-msmadi text-xl mb-10">trwa proces twórczy</p>
   <div>
     <Image
       class="interactive-flower w-48 rotate-[var(--flower-swing,0deg)] translate-x-12"
