--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import NavBar from '../components/NavBar.astro';
 ---
 
 <!doctype html>
@@ -12,6 +13,7 @@ import '../styles/global.css';
     <title>VVERA—STUDIO</title>
   </head>
   <body class="bg-[#FFFDE6]">
+    <NavBar />
     <slot />
   </body>
 </html>
