--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,4 +5,20 @@
 
 @theme {
 	--font-msmadi: "Ms Madi", cursive;
+	--font-poppins: "Poppins", sans-serif;
+}
+
+@font-face {
+	font-family: "Poppins";
+	src: url("/fonts/Poppins-Light.ttf") format("truetype");
+	font-weight: 300;
+	font-style: normal;
+	font-display: swap;
+}
+@font-face {
+	font-family: "Poppins";
+	src: url("/fonts/Poppins-Regular.ttf") format("truetype");
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
 }
