--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -15,67 +15,112 @@ import Flower from './Flower.astro';
 
 <main class="">
   <!-- <p class="font-msmadi text-xl mb-10">trwa proces twórczy</p> -->
-  <section id="o-mnie" class="flex justify-center items-start pt-48">
+  <section id="o-mnie">
     <h1 class="sr-only">O mnie</h1>
-    <div class="relative w-96 h-[36rem]">
-      <Flower class="absolute top-28 left-40 w-60 -scale-x-100" />
-      <Flower class="absolute top-0 left-0 w-60" />
-      <Image
-        src={MiniWera2}
-        class="absolute top-0 left-2 w-28"
-        alt="A picture of Weronika Kubala"
-        role="presentation"
-      />
-      <Image
-        src={MiniWera3}
-        class="absolute top-48 left-14 w-72"
-        alt="A picture of Weronika Kubala"
-        role="presentation"
-      />
+    <div class="hidden lg:flex justify-center items-start pt-48">
+      <!-- Desktop -->
+      <div class="relative w-[21rem] h-[36rem]">
+        <Flower class="absolute top-28 left-40 w-60 -scale-x-100" />
+        <Flower class="absolute top-0 left-0 w-60" />
+        <Image
+          src={MiniWera2}
+          class="absolute top-0 left-2 w-28"
+          alt="A picture of Weronika Kubala"
+          role="presentation"
+        />
+        <Image
+          src={MiniWera3}
+          class="absolute top-48 left-14 w-72"
+          alt="A picture of Weronika Kubala"
+          role="presentation"
+        />
+      </div>
+      <div class="pt-4">
+        <Image
+          src={TitleWeronikaKubala}
+          alt="Weronika Kubala"
+          class="w-[30rem]"
+        />
+        <p class="font-poppins font-light max-w-56 ml-24 mt-20 mb-12">
+          Całe dotychczasowe życie spędziłam na odkrywaniu jednej prawdy o
+          sobie:
+        </p>
+        <Image
+          src={QuoteJestemStworzonaZebyTworzyc}
+          alt="Jestem stworzona żeby tworzyć"
+          class="ml-28 w-96"
+        />
+      </div>
+      <div class="relative w-[16rem] h-[36rem]">
+        <Image
+          src={MiniWera1}
+          class="absolute bottom-0 right-0 w-[16rem]"
+          alt="A picture of Weronika Kubala"
+          role="presentation"
+        />
+        <Flower class="absolute bottom-4 -right-16 w-[15rem] -scale-x-100" />
+      </div>
     </div>
-    <div>
+    <div class="flex lg:hidden flex-col items-center pt-32">
+      <!-- Mobile -->
       <Image
         src={TitleWeronikaKubala}
         alt="Weronika Kubala"
-        class="w-[30rem]"
+        class="w-[20rem] mb-8"
       />
-      <p class="font-poppins font-light max-w-56 ml-24 mt-20 mb-12">
-        Całe dotychczasowe życie spędziłam na odkrywaniu jednej prawdy o sobie:
-      </p>
-      <Image
-        src={QuoteJestemStworzonaZebyTworzyc}
-        alt="Jestem stworzona żeby tworzyć"
-        class="ml-28 w-96"
-      />
-    </div>
-    <div class="relative w-[20rem] h-[36rem]">
-      <Image
-        src={MiniWera1}
-        class="absolute bottom-0 left-14 w-[16rem]"
-        alt="A picture of Weronika Kubala"
-        role="presentation"
-      />
-      <Flower class="absolute bottom-4 right-4 w-[13rem] -scale-x-100" />
+      <div class="flex justify-center">
+        <div class="relative w-[15rem] h-[20rem]">
+          <Flower class="absolute top-0 left-0 w-48" />
+          <Image
+            src={MiniWera2}
+            class="absolute top-0 left-2 w-24"
+            alt="A picture of Weronika Kubala"
+            role="presentation"
+          />
+        </div>
+        <div class="relative">
+          <p class="font-poppins font-light max-w-56 pt-8">
+            Całe dotychczasowe życie spędziłam na odkrywaniu jednej prawdy o
+            sobie:
+          </p>
+          <Image
+            src={QuoteJestemStworzonaZebyTworzyc}
+            alt="Jestem stworzona żeby tworzyć"
+            class="absolute max-w-none w-72 -left-24 top-[11rem]"
+          />
+        </div>
+      </div>
+      <div class="flex justify-center">
+        <div class="relative w-[20rem] h-[23rem]">
+          <Flower class="absolute top-0 left-26 w-52 -scale-x-100" />
+          <Image
+            src={MiniWera3}
+            class="absolute top-12 left-0 w-60"
+            alt="A picture of Weronika Kubala"
+            role="presentation"
+          />
+        </div>
+      </div>
     </div>
   </section>
   <section
-    class="pt-24 w-fit w-content mx-auto grid grid-cols-[auto,auto] grid-rows-[auto,1fr] gap-x-20"
+    class="pt-24 w-fit w-content mx-auto grid grid-cols-1 grid-rows-[auto,auto,auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto,1fr] gap-x-20"
   >
     <h1 class="sr-only">O mojej drodze</h1>
-    <div class="col-start-1 col-span-1 row-start-1 row-span-1 flex justify-end">
+    <div class="lg:col-start-1 lg:row-start-1 flex justify-end">
       <Image src={TitleOMojejDrodze} alt="O mojej drodze" />
     </div>
-    <div
-      class="relative pl-64 pt-6 pb-12 col-start-1 col-span-1 row-start-2 row-span-1"
-    >
-      <Image
-        src={OMojejDrodze}
-        alt="A picture of Weronika Kubala"
-        class="w-80"
-      />
-      <Flower class="absolute left-10 bottom-0 w-64" />
+    <div class="pt-6 pb-12 lg:col-start-1 lg:row-start-2 place-content-center">
+      <div class="relative pl-32 lg:pl-36 w-fit">
+        <Image
+          src={OMojejDrodze}
+          alt="A picture of Weronika Kubala"
+          class="border border-black w-60 lg:w-80"
+        />
+        <Flower class="absolute left-10 bottom-0 w-32 lg:left-0 lg:w-60" />
+      </div>
     </div>
-    <div class="col-start-2 col-span-1 row-start-1 row-end-3 p-6 flex flex-col">
+    <div class="lg:col-start-2 lg:row-start-1 lg:row-span-2 p-6 flex flex-col">
       <p class="w-[19rem] font-poppins font-light mr-16">
         Mam 24 lata.
         <br />
@@ -95,12 +140,12 @@ import Flower from './Flower.astro';
       />
     </div>
   </section>
-  <section id="kontakt" class="flex justify-center pb-48">
+  <!-- <section id="kontakt" class="flex justify-center pb-48">
     <div>
       <Image src={PhotoGrid} alt="A photo grid" class="w-[32rem]" />
     </div>
     <div class="flex flex-col justify-center">
       <Image src={QuoteBadzmyWKontakcie} alt="Bądźmy w kontakcie" />
     </div>
-  </section>
+  </section> -->
 </main>
