Better contact section

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -5,12 +5,11 @@ import TitleWeronikaKubala from '../assets/title-weronika-kubala.svg';
 import TitleOMojejDrodze from '../assets/title-o-mojej-drodze.svg';
 import QuoteJestemStworzonaZebyTworzyc from '../assets/quote-jestem-stworzona-zeby-tworzyc.svg';
 import QuoteCzujeSieNajbardziej from '../assets/quote-czuje-sie-najbardziej-zywa-kiedy-ciagle-probuje.svg';
-import QuoteBadzmyWKontakcie from '../assets/quote-badzmy-w-kontakcie.svg';
-import PhotoGrid from '../assets/photo-grid.png';
 import MiniWera1 from '../assets/mini-wera-1.png';
 import MiniWera2 from '../assets/mini-wera-2.png';
 import MiniWera3 from '../assets/mini-wera-3.png';
 import Flower from './Flower.astro';
+import Contact from './Contact.astro';
 ---
 
 <main class="">
@@ -140,12 +139,5 @@ import Flower from './Flower.astro';
       />
     </div>
   </section>
-  <!-- <section id="kontakt" class="flex justify-center pb-48">
-    <div>
-      <Image src={PhotoGrid} alt="A photo grid" class="w-[32rem]" />
-    </div>
-    <div class="flex flex-col justify-center">
-      <Image src={QuoteBadzmyWKontakcie} alt="Bądźmy w kontakcie" />
-    </div>
-  </section> -->
+  <Contact />
 </main>
