--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,3 +22,10 @@
 	font-style: normal;
 	font-display: swap;
 }
+@font-face {
+	font-family: "Poppins";
+	src: url("/fonts/Poppins-Medium.ttf") format("truetype");
+	font-weight: 500;
+	font-style: normal;
+	font-display: swap;
+}
