--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -3,6 +3,8 @@ import { Image } from 'astro:assets';
 import OMojejDrodze from '../assets/o-mojej-drodze.png';
 import TitleWeronikaKubala from '../assets/title-weronika-kubala.svg';
 import TitleOMojejDrodze from '../assets/title-o-mojej-drodze.svg';
+import TitleOlejkiDoUstYourKayaProduktWUzyciu from '../assets/title-olejki-do-ust-your-kaya-produkt-w-uzyciu.svg';
+import MediaOlejkiDoUstYourKayaProduktWUzyciu from '../assets/media-olejki-do-ust-your-kaya-produkt-w-uzyciu.png';
 import QuoteJestemStworzonaZebyTworzyc from '../assets/quote-jestem-stworzona-zeby-tworzyc.svg';
 import QuoteCzujeSieNajbardziej from '../assets/quote-czuje-sie-najbardziej-zywa-kiedy-ciagle-probuje.svg';
 import MiniWera1 from '../assets/mini-wera-1.png';
@@ -10,6 +12,7 @@ import MiniWera2 from '../assets/mini-wera-2.png';
 import MiniWera3 from '../assets/mini-wera-3.png';
 import Flower from './Flower.astro';
 import Contact from './Contact.astro';
+import SimpleMediaAndDescription from './SimpleMediaAndDescription.astro';
 ---
 
 <main class="">
@@ -139,5 +142,36 @@ import Contact from './Contact.astro';
       />
     </div>
   </section>
+  <SimpleMediaAndDescription
+    name="Olejki do ust Your Kaya UGC Beauty / Produkt w użyciu"
+  >
+    <Image
+      slot="title"
+      src={TitleOlejkiDoUstYourKayaProduktWUzyciu}
+      alt="Olejki do ust Your Kaya UGC Beauty / Produkt w użyciu"
+      class="w-[28rem]"
+    />
+    <Image
+      slot="media"
+      src={MediaOlejkiDoUstYourKayaProduktWUzyciu}
+      alt="Zdjęcie produktu na smartfonie"
+      class="w-[18rem]"
+    />
+    <div slot="description">
+      <p>
+        Typ contentu: zdjęcia beauty (karuzela na Instagram) Produkt: olejki do
+        ust marki Your Kaya Rola: koncepcja, stylizacja, zdjęcia, postprodukcja
+        Kategoria: UGC – beauty / produkt w użyciu Cel: podkreślenie estetyki
+        produktu i jego funkcji pielęgnacyjnej
+      </p><p class="mt-8">
+        W tej realizacji chciałam pokazać olejki Your Kaya jako codzienny, ale
+        wyjątkowy element pielęgnacji – coś, co jest naturalnym przedłużeniem
+        troski o siebie. Skupiłam się na subtelnych detalach: strukturze,
+        połysku, delikatnych gestach i minimalistycznej estetyce. Zdjęcia
+        utrzymane są w spójnym, czystym klimacie, który odzwierciedla charakter
+        marki.
+      </p>
+    </div>
+  </SimpleMediaAndDescription>
   <Contact />
 </main>
