--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,10 +6,10 @@
   class="fixed z-10 inset-x-0 top-0 font-poppins font-light text-[#665f20] backdrop-blur-3xl"
 >
   <ul class="flex py-4 justify-center items-center gap-5">
-    <!-- <li><a href="/#o-mnie">o mnie</a></li>
+    <li><a href="#o-mnie">o mnie</a></li>
     <li>social media</li>
     <li>copywriting</li>
     <li>ugc</li>
-    <li><a href="/#kontakt">kontakt</a></li> -->
+    <li><a href="#kontakt">kontakt</a></li>
   </ul>
 </nav>
