--- a/src/components/SimpleMediaAndDescription.astro
+++ b/src/components/SimpleMediaAndDescription.astro
@@ -7,18 +7,34 @@ const { name } = Astro.props;
 ---
 
 <section
-  class="mx-auto mt-20 w-fit grid grid-cols-1 grid-rows-[auto,auto,auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto,auto] gap-x-16"
+  class="mx-auto mt-20 w-fit grid grid-cols-1 grid-rows-[auto_auto_auto] lg:grid-cols-[auto,auto] lg:grid-rows-[auto_1fr] gap-x-16"
 >
   <h1 class="sr-only">{name}</h1>
-  <div class="lg:col-start-2 lg:row-start-1">
+  <div
+    class="title lg:col-start-2 lg:row-start-1 *:w-[20rem] lg:*:w-[28rem] mb-8"
+  >
     <slot name="title" />
   </div>
-  <div class="lg:col-start-1 lg:row-start-1 lg:row-span-2">
+  <div class="media mb-8 lg:mb-0 lg:col-start-1 lg:row-start-1 lg:row-span-2">
     <slot name="media" />
   </div>
   <div
-    class="mx-auto w-fit lg:col-start-2 lg:row-start-2 max-w-[23rem] font-poppins font-light text-base"
+    class="description mx-auto w-fit lg:col-start-2 lg:row-start-2 max-w-[23rem] font-poppins font-light text-base"
   >
     <slot name="description" />
   </div>
 </section>
+
+<style>
+  .title {
+    justify-self: center;
+  }
+
+  .media {
+    justify-self: center;
+  }
+
+  .description {
+    align-self: start;
+  }
+</style>
