--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -3,9 +3,19 @@
 ---
 
 <nav
-  class="fixed z-10 inset-x-0 top-0 font-poppins font-light text-[#665f20] backdrop-blur-3xl"
+  class="group fixed z-10 inset-x-0 top-0 font-poppins font-light text-[#665f20] bg-[#FFFDE6]/50 backdrop-blur-3xl"
 >
-  <ul class="flex py-4 justify-center items-center gap-5">
+  <button
+    type="button"
+    class="flex sm:hidden w-full h-8 flex-col justify-center items-center gap-1.5 focus:gap-0.5 transition-all ease-out duration-200 cursor-pointer"
+  >
+    <div class="w-6 h-0.25 bg-[currentColor]"></div>
+    <div class="w-6 h-0.25 bg-[currentColor]"></div>
+    <div class="w-6 h-0.25 bg-[currentColor]"></div>
+  </button>
+  <ul
+    class="hidden group-focus-within:flex sm:flex flex-col sm:flex-row flex-wrap py-4 justify-center items-center gap-5"
+  >
     <li><a href="#o-mnie">o mnie</a></li>
     <li>social media</li>
     <li>copywriting</li>
