--- a/src/components/PhoneInstagram.astro
+++ b/src/components/PhoneInstagram.astro
@@ -4,9 +4,9 @@ import PhotoGrid from '../assets/photo-grid.jpg';
 import { Image } from 'astro:assets';
 ---
 
-<div class="relative w-[256px] h-[256px]">
+<div class="relative w-[8rem] h-[8rem] lg:w-[16rem] lg:h-[16rem]">
   <Image
-    class="phone-instagram-content absolute inset-0 z-10 w-[256px] h-[256px]"
+    class="phone-instagram-content absolute inset-0 z-10 h-[100%]"
     src={PhotoGrid}
     alt="TEMP"
     role="presentation"
