--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -17,8 +17,8 @@
     class="hidden group-focus-within:flex sm:flex flex-col sm:flex-row flex-wrap py-4 justify-center items-center gap-5"
   >
     <li><a href="#o-mnie">o mnie</a></li>
-    <li>social media</li>
-    <li>copywriting</li>
+    <li><a href="#social-media">social media</a></li>
+    <li><a href="#copywriting">copywriting</a></li>
     <li>ugc</li>
     <li><a href="#kontakt">kontakt</a></li>
   </ul>
