Better copywriting section

--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -207,7 +207,7 @@ import PhoneInstagram from './PhoneInstagram.astro';
   </section>
   <section
     id="copywriting"
-    class="pt-32 grid grid-cols-[auto] grid-rows-[auto_auto_1fr] lg:grid-cols[auto_auto] lg:grid-rows-[auto_1fr] min-h-[36rem]"
+    class="mx-auto pt-32 w-fit grid lg:gap-x-16 grid-cols-[auto] grid-rows-[auto_auto_1fr] lg:grid-cols[auto_auto] lg:grid-rows-[auto_1fr] min-h-[36rem]"
   >
     <h1 class="sr-only">Copywriting</h1>
     <Image
