--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -19,7 +19,7 @@
     <li><a href="#o-mnie">o mnie</a></li>
     <li><a href="#social-media">social media</a></li>
     <li><a href="#copywriting">copywriting</a></li>
-    <li>ugc</li>
+    <li><a href="#ugc">ugc</a></li>
     <li><a href="#kontakt">kontakt</a></li>
   </ul>
 </nav>
